@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed xclass support for Fl_Window (STR #2053)
 	- Fixed Caps Lock handling in X11/XIM (STR #2366)
 	- Fixed handling of missing fonts in Xft (STR #2355)
 	- Added alternative Xft font names (STR #2215)
